--- a/.github/workflows/Prioritize.yml
+++ b/.github/workflows/Prioritize.yml
@@ -9,11 +9,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK
+    - name: Set up JDK 15
       uses: actions/setup-java@v2
       with:
-        java-version: '8'
-        distribution: 'adopt'
+          distribution: 'zulu'
+          java-version: 15
+          architecture: x64
     
     - name: Cache local Maven repository
       uses: actions/cache@v2
