--- a/.github/workflows/Prioritize.yml
+++ b/.github/workflows/Prioritize.yml
@@ -1,6 +1,8 @@
 name: Whitesource Prioritize Java with Maven
 
 on: workflow_dispatch
+tags:
+-'v8.1.0'
 
 jobs:
   build:
@@ -9,9 +11,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 15
+    - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
+          ref: 'v8.1.0'
           distribution: 'zulu'
           java-version: 15
           architecture: x64
